extras/envoy/envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  labels:
    app: envoy
data:
  envoy.conf: |
    admin:
      address:
        socket_address:
          protocol: TCP
          address: 127.0.0.1
          port_value: 9901

    static_resources:
      listeners:
      - name: http_80
        address:
          socket_address:
            protocol: TCP
            address: 0.0.0.0
            port_value: 80
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: jellyfin_route
                virtual_hosts:
                - name: jellyfin_external
                  domains: ["jellyfin.192.168.0.105.nip.io"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: jellyfin_backend
                      host_rewrite_literal: jellyfin.jellyfin.svc.cluster.local
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router  # ← Fixed!

      clusters:
      - name: jellyfin_backend
        connect_timeout: 30s
        type: LOGICAL_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: jellyfin_backend
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: jellyfin.jellyfin.svc.cluster.local
                    port_value: 8096
