extras/envoy/envoy-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: envoy-daemonset
  labels:
    app: envoy
spec:
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.37-latest
        ports:
        - containerPort: 80
          name: http
        command: ["sleep", "infinity"]
        volumeMounts:
        - name: envoy-config-volume
          mountPath: /etc/envoy/envoy.yaml
          subPath: envoy.conf
      volumes:
      - name: envoy-config-volume
        configMap:
          name: envoy-config
